--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # Default code owners
-*       @ElectroRoute-Japan/Contino @ElectroRoute-Japan/Cranes @ElectroRoute-Japan/inquisitors
+*       @ElectroRoute-Japan/Cranes @ElectroRoute-Japan/inquisitors
